--- a/contact.html
+++ b/contact.html
@@ -15,12 +15,12 @@
 <body class="contact-body">
     <header class="contact-header">
         <nav class="nav-container">
-            <a href="/index.html">
+            <a href="./index.html">
                 <h1>Noticify</h1>
             </a>
             <div class="nav-links-container">
                 <a href="#">About</a>
-                <a href="/contact.html">Contact</a>
+                <a href="./contact.html">Contact</a>
             </div>
         </nav>
     </header>
