--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Noticify</h1>
             <div class="nav-links-container">
                 <a href="#">About</a>
-                <a href="/contact.html">Contact</a>
+                <a href="./contact.html">Contact</a>
             </div>
         </nav>
     </header>
@@ -94,7 +94,7 @@
                     </a>
                 </div>
                 <div class="welcome-btn-container btn-green">
-                    <a href="/contact.html">
+                    <a href="./contact.html">
                         <span class="btn-info">Contact us</span>
                         <div class="welcome-btn btn-green-solid">
                             <img src="./images/arrow-black.svg" alt="arrow">
